# solvents

./: .gitignore  .travis.yml  README.md  a.cpp  mathjax_test.html  package.json
lang/cc/: before_install  create_makefile  fixlint  install  lint  script
lang/go/: fixlint  lint  script
lang/hs/: copy_source  install  lint  script  solvents.cabal
lang/hs/src/: Spec.hs
lang/java/: build.gradle  script  sun_checks.xml  suppressions.xml  update_checkstyle_config
lang/js/: fixlint  install  lint  package.json  script
lang/py/: before_install  install  lint  script
projecteuler/0001/: multiples_of_3_and_5.js  multiples_of_3_and_5_test.js  multiples_of_3_or_5.js  multiples_of_3_or_5_test.js
projecteuler/p0001/: README.md  multiples_of_3_or_5.js
samples/: FortyTwo.hs  FortyTwo.java  FortyTwoSpec.hs  FortyTwoTest.hs  FortyTwoTest.java  README.md  __init__.py  fortyone.cc  fortyone.h  fortyone_test.cc  fortytwo.cc  fortytwo.go  fortytwo.js  fortytwo.py  fortytwo_mochatest.js  fortytwo_test.cc  fortytwo_test.go  fortytwo_test.js  fortytwo_test.py
samples/01/: ATest.java
samples/p01/: A.java  FortyTwo.hs  FortyTwo.java  FortyTwoSpec.hs  FortyTwoTest.java  README.md  fortyone.cc  fortyone.py  fortyone_test.cc  fortyone_test.py  fortytwo.cc  fortytwo.go  fortytwo.h  fortytwo_test.go  fortytwo_test.js
src/samples/: fortytwo.go  fortytwo_test.go
