name:             solvents
version:          0.1.0
build-type:       Simple
cabal-version:    >= 1.8

library
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      lang/hs/src
  build-depends:
      base    == 4.*

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      lang/hs/src
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , hspec   >= 1.3
